Assignments and random codes

--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="popup-container">
             <div class="card">
-                <button class="close">x</button>
+                <a href="#" class="close"></a>
                 <h1>Hello World</h1>
             </div>
             <button class="btn">Click Me Baby</button>
