CHanged Theme background and added service page

--- a/Assignment/Index.html
+++ b/Assignment/Index.html
@@ -42,47 +42,12 @@
                 </p>
               </div>
               <div class="btn-container">
-                <button class="btn">More about us</button>
+                <a href="Register.html"><button class="btn">Buy a car</button></a>
+                <a href="Register.html"><button class="btn">Sell a car</button></a>
               </div>
           </div>
-        </section>
-        
-         <!--Section 2-->
-        <section class="section sectionA2">
-          <div class="heading">
-            <h1>Our Services?</h1> 
-          </div>
-          <div class="card-container-A2">
-            <h2 class="h2-1">Sell your car</h2>
-            <div class="card1-A2">
-              <div class="card1-content">
-                <p>
-                Ready to upgrade? Sell your car effortlessly with us! Reach eager buyers, highlight your car's unique features, and set the price you want. Our secure platform ensures a smooth selling process. List your car today and maximize your sale! 
-                </p>
-              </div>
-              <div class="card1-pic">
-                <img class="car-pic" src="Pictures/pngegg.png" alt="car">
-              </div>
-            </div>
-            <h2 class="h2-2">Or maybe Buy a car?</h2>
-            <div class="card2-A2">
-              <div class="card2-pic">
-                <img src="Pictures/car2.png" class="car-pic" alt="">
-              </div>
-              <div class="card1-content">
-                <p>
-                Discover your perfect ride with us! Explore a wide selection of quality cars, each with detailed specs to make your choice easy. Our transparent pricing and hassle-free process eliminate the stress. Don't miss out on your dream car – shop now and drive home with confidence!
-                </p>
-              </div>
-            </div>
-          </div>
-        </section>
+        </section>    
       </main>
-      <footer class="footer-container">
-        <div class="in-ft-container">
-          
-        </div>
-      </footer>
     </div>
  
 
