--- a/Assignment/Register.html
+++ b/Assignment/Register.html
@@ -20,12 +20,12 @@
             <li><a href="">About</a></li>
             <li><a href="Register.html">Services</a></li>
             <li><a href="">Contact</a></li>
-            <li><a href="#" class="login">
+            <li><a href="Login.html" class="login">
               <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512" class="font-svg"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M304 128a80 80 0 1 0 -160 0 80 80 0 1 0 160 0zM96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM49.3 464H398.7c-8.9-63.3-63.3-112-129-112H178.3c-65.7 0-120.1 48.7-129 112zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3z"/></svg></a></li>
           </ul>
         </div>
       </header>
-      <main class="main-container">
+      <main class="service-main-container">
         <section class="section-2">
           <div class="overlay">
             <div class="blur-container">
@@ -35,13 +35,13 @@
                   <i class="icon fa-solid fa-money-bill-wave"></i>
                   <h1>Sell Your Car</h1>
                   <p>"Ready to Upgrade? Sell Your Car with Ease! Get Top Dollar for Your Vehicle with Our Hassle-Free Selling Process. Your Next Adventure Awaits – Sell Now!</p>
-                  <button class="btn btn-sell">Sell your Car</button>
+                  <button class="btn btn-sell"><a href="Login.html">Sell your Car</a></button>
                 </div>
                 <div class="buy-container">
                   <i class="icon fa-solid fa-car-side"></i>
                   <h1>Buy a car</h1>
                   <p>Discover Your Ideal Ride with Us. Explore a Diverse Range of Quality Cars That Match Your Desires. Your Dream Car Awaits – Start Your Journey Today!</p>
-                  <button class="btn btn-buy">Buy a car</button>
+                  <button class="btn btn-buy"><a href="Login.html">Sell your Car</a></button>
                 </div>
               </div>
             </div>
