Moved all the changes made from foreign PC / uploaded the file to github then copied that file to my local PC because IDK how to use the git like i need to get my shit together

--- a/Assignment/Register.html
+++ b/Assignment/Register.html
@@ -29,24 +29,37 @@
         <section class="section-2">
           <div class="overlay">
             <div class="blur-container">
-              <div class="service-moto"> Buy, Sell, Elevate Your Drive</div>
+              <div class="service-moto"> Transform Your Journey with Us</div>
               <div class="card-container">
                 <div class="sell-container">
                   <i class="icon fa-solid fa-money-bill-wave"></i>
                   <h1>Sell Your Car</h1>
                   <p>"Ready to Upgrade? Sell Your Car with Ease! Get Top Dollar for Your Vehicle with Our Hassle-Free Selling Process. Your Next Adventure Awaits – Sell Now!</p>
-                  <button class="btn btn-sell"><a href="Login.html">Sell your Car</a></button>
+                  <a href="Login.html"><button class="btn btn-sell">Sell your Car</button></a>
                 </div>
                 <div class="buy-container">
                   <i class="icon fa-solid fa-car-side"></i>
                   <h1>Buy a car</h1>
                   <p>Discover Your Ideal Ride with Us. Explore a Diverse Range of Quality Cars That Match Your Desires. Your Dream Car Awaits – Start Your Journey Today!</p>
-                  <button class="btn btn-buy"><a href="Login.html">Sell your Car</a></button>
+                  <a href="Login.html"><button class="btn btn-buy">Buy a Car</button></a>
                 </div>
+              </div>
+              <div class="search-bar-container">
+                <input type="text" id="search"><button>Search</button>
               </div>
             </div>
           </div>
         </section>
+
+        <section class="section3">
+          <div class="section3-card-container">
+            <h1>Hot Picks</h1>
+          </div>
+        </section>
+        <footer class="footer-container">
+        <p>Designed and Developed By Shivendra K C</p>
+        <p>&copy; 2023 GearShift. All rights reserved.</p>
+      </footer>
       </main>
     </div>
  
