Made few changes on register page

--- a/Assignment/Register.html
+++ b/Assignment/Register.html
@@ -45,17 +45,13 @@
                 </div>
               </div>
               <div class="search-bar-container">
-                <input type="text" id="search"><button>Search</button>
+                <input type="text" id="search" placeholder="What are you looking for?"><button class="search-btn">Search</button>
               </div>
             </div>
           </div>
         </section>
 
-        <section class="section3">
-          <div class="section3-card-container">
-            <h1>Hot Picks</h1>
-          </div>
-        </section>
+        
         <footer class="footer-container">
         <p>Designed and Developed By Shivendra K C</p>
         <p>&copy; 2023 GearShift. All rights reserved.</p>
