--- a/Assignment/Index.html
+++ b/Assignment/Index.html
@@ -24,7 +24,7 @@
           </ul>
         </div>
       </header>
-      <main class="main-container">
+      <main class="main main-container">
 
         <!--Section 1-->
         <section class="section section1">
