made changes in remote host and imported code to the local PC / Added section3 in register and changes in css

--- a/Assignment/Register.html
+++ b/Assignment/Register.html
@@ -48,11 +48,11 @@
                       </div>
                     </div>
                     <div class="search-bar-container">
-                      <input type="text" id="search" placeholder="What are you looking for?"><button class="search-btn">Search</button>
+                      <input type="text" id="search" placeholder="Type any car model"><button class="search-btn">Search</button>
                     </div>
                   </div>
                  
-                  <div id="slide" class="sliding-section">
+                  <!--<div id="slide" class="sliding-section">
                     <div class="inner-container">
                       <a href="#slide1"><button class="back-btn slide1-btn">Back</button></a>
                     <div class="selling-heading">
@@ -90,7 +90,7 @@
                       </form>
                     </div>
                     </div>
-                  </div>
+                  </div>-->
                   
                 </div>
               </div>
@@ -125,16 +125,16 @@
                   </div>
                   <div class="specs">
                     <div class="spec mpg">
-                      <span>EPA City/Hwy</span>
-                      <p>9/14<span>mpg</p>
+                      <span>Make</span>
+                      <p>2019</p>
                     </div>
                     <div class="spec mpg">
-                      <span>0-60</span>
-                      <p>2.3<span>sec</p>
+                      <span>Milage</span>
+                      <p>91,000<span>KM</p>
                     </div>
                     <div class="spec mpg">
-                      <span>Horsepower</span>
-                      <p>1500<span>hp</p>
+                      <span>Type</span>
+                      <p>Automatic</p>
                     </div>
                   </div>
                 </div>
@@ -162,16 +162,16 @@
                   </div>
                   <div class="specs">
                     <div class="spec mpg">
-                      <span>EPA City/Hwy</span>
-                      <p>16/22<span>mpg</p>
+                      <span>Make</span>
+                      <p>2019</p>
                     </div>
                     <div class="spec mpg">
-                      <span>0-60</span>
-                      <p>3.5<span>sec</p>
+                      <span>Milage</span>
+                      <p>91,000<span>KM</p>
                     </div>
                     <div class="spec mpg">
-                      <span>Horsepower</span>
-                      <p>503<span>hp</p>
+                      <span>Type</span>
+                      <p>Automatic</p>
                     </div>
                   </div>
                 </div>
@@ -199,16 +199,16 @@
                   </div>
                   <div class="specs">
                     <div class="spec mpg">
-                      <span>EPA City/Hwy</span>
-                      <p>14/20<span>mpg</p>
+                      <span>Make</span>
+                      <p>2019</p>
                     </div>
                     <div class="spec mpg">
-                      <span>0-60</span>
-                      <p>2.5<span>sec</p>
+                      <span>Milage</span>
+                      <p>91,000<span>KM</p>
                     </div>
                     <div class="spec mpg">
-                      <span>Horsepower</span>
-                      <p>602<span>hp</p>
+                      <span>Type</span>
+                      <p>Automatic</p>
                     </div>
                   </div>
                 </div>
@@ -236,16 +236,16 @@
                   </div>
                   <div class="specs">
                     <div class="spec mpg">
-                      <span>EPA City/Hwy</span>
-                      <p>12/16<span>mpg</p>
+                      <span>Make</span>
+                      <p>2019</p>
                     </div>
                     <div class="spec mpg">
-                      <span>0-60</span>
-                      <p>2.8<span>sec</p>
+                      <span>Milage</span>
+                      <p>91,000<span>KM</p>
                     </div>
                     <div class="spec mpg">
-                      <span>Horsepower</span>
-                      <p>789<span>hp</p>
+                      <span>Type</span>
+                      <p>Automatic</p>
                     </div>
                   </div>
                 </div>
@@ -273,16 +273,16 @@
                   </div>
                   <div class="specs">
                     <div class="spec mpg">
-                      <span>EPA City/Hwy</span>
-                      <p>XX/XX<span>mpg</p>
+                      <span>Make</span>
+                      <p>2019</p>
                     </div>
                     <div class="spec mpg">
-                      <span>0-60</span>
-                      <p>2.8<span>sec</p>
+                      <span>Milage</span>
+                      <p>91,000<span>KM</p>
                     </div>
                     <div class="spec mpg">
-                      <span>Horsepower</span>
-                      <p>710<span>hp</p>
+                      <span>Type</span>
+                      <p>Automatic</p>
                     </div>
                   </div>
                 </div>
@@ -310,16 +310,16 @@
                   </div>
                   <div class="specs">
                     <div class="spec mpg">
-                      <span>EPA City/Hwy</span>
-                      <p>14/20<span>mpg</p>
+                      <span>Make</span>
+                      <p>2019</p>
                     </div>
                     <div class="spec mpg">
-                      <span>0-60</span>
-                      <p>3.4<span>sec</p>
+                      <span>Milage</span>
+                      <p>91,000<span>KM</p>
                     </div>
                     <div class="spec mpg">
-                      <span>Horsepower</span>
-                      <p>500<span>hp</p>
+                      <span>Type</span>
+                      <p>Automatic</p>
                     </div>
                   </div>
                 </div>
