Added About page

--- a/Assignment/Login.html
+++ b/Assignment/Login.html
@@ -14,14 +14,14 @@
             <div class="form-card-container-front">
                 <a href="Register.html"><button class="back-btn">Go Back </button></a>
                 <h1>LOGIN</h1>
-                <form action="" method="POST">
+                <form action="#" method="POST">
                     <div class="input-box">
                         <label for="username">Username</label>
-                        <input type="text" name="username" placeholder="Enter your username or email">
+                        <input type="text" name="username" placeholder="Enter your username or email" required>
                     </div>
                     <div class="input-box">
                         <label for="password">Password</label>
-                        <input type="password" name="password" placeholder="Enter your password">
+                        <input type="password" name="password" placeholder="Enter your password" required>
                     </div>
                      <div class="submit-button">
                             <input type="submit" value="Login">
