Added About us page /  Added a side project

--- a/Assignment/About.html
+++ b/Assignment/About.html
@@ -32,7 +32,7 @@
                         <p class="contact">Contact us today to start your journey.</p>
                     </div>
                     <div class="about-image">
-                        
+                        <img src="Pictures/pngegg.png" alt="carabout">
                     </div>
                 </div>
             </section>
