Completed all the rubric moving on to the final touches for the frontend design

--- a/Assignment/About.html
+++ b/Assignment/About.html
@@ -29,11 +29,52 @@
                         <h1><Strong>HEY!</Strong><br>We're GearShift</h1>
                         <p>Welcome to GearShift, where automotive dreams come true. Our team of passionate experts is here to guide you to the perfect vehicle, ensuring every mile is a memorable one.</p> 
                         <br>
-                        <p class="contact">Contact us today to start your journey.</p>
+                        <a href="#contact"><button class="btn contact">Contact us</button></a>
                     </div>
                     <div class="about-image">
-                        <img src="Pictures/pngegg.png" alt="carabout">
+                        <img src="Pictures/png.png" alt="carabout">
                     </div>
+                </div>
+            </section>
+            <section class="team-container">
+                    <h1>Meet our Team</h1>
+                <div class="team-card-container">
+                    <div class="team-card">
+                        <img src="Pictures/714.jpg" alt="photo">
+                        <div class="team-content">
+                            <h2>Mr Shivendra K C</h2>
+                            <p class="title">CEO & Founder</p>
+                            <p>Our visionary CEO and founder, Shivendra K C, leads our company with innovation and dedication. His commitment to excellence drives our success. </p>
+                            <p class="Email">shivendrakc2468@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="team-card">
+                        <img src="Pictures/714.jpg" alt="photo">
+                        <div class="team-content">
+                            <h2>Mr Binchillin</h2>
+                            <p class="title">Head of Logistics</p>
+                            <p>Mr. Binchillin is our logistics expert, ensuring efficient operations and timely deliveries.</p>
+                            <p class="Email">Healinandpealin@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="team-card">
+                        <img src="Pictures/714.jpg" alt="photo">
+                        <div class="team-content">
+                            <h2>Mr Terrimeri</h2>
+                            <p class="title">Managing Director</p>
+                            <p>As our Managing Director, Mr. Terrimeri guides strategic development and fosters growth</p>
+                            <p class="Email">meriteripremkahani@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="contact" class="contact-container">
+                <div class="contact-section">
+                     <h2>GearShift</h2>
+                     <p>5 Fussel Lane Gungahlin</p>
+                     <p>Telephone: (123) 456-7890</p>
+                     <p>Fax: (123) 456-7891</p>
+                     <p>Email: GearShift@gmail.com</p>
                 </div>
             </section>
           </main>
