--- a/Assignment/Register.html
+++ b/Assignment/Register.html
@@ -37,7 +37,7 @@
                         <i class="icon fa-solid fa-money-bill-wave"></i>
                         <h1>Sell Your Car</h1>
                         <p>"Ready to Upgrade? Sell Your Car with Ease! Get Top Dollar for Your Vehicle with Our Hassle-Free Selling Process. Your Next Adventure Awaits – Sell Now!</p>
-                        <a href="#slide"><button class="btn btn-sell">Sell your Car</button></a>
+                        <a href="#addcar"><button class="btn btn-sell">Sell your Car</button></a>
                       </div>
                       <div class="buy-container">
                         <i class="icon fa-solid fa-car-side"></i>
@@ -79,26 +79,9 @@
                   </div>
                   <div class="ctas">
                     <a href="#" class="btn-car primary">Model Details</a>
-                    <a href="#" class="btn-car secondary">Cars for Sale</a>
+                    <a href="#" class="btn-car secondary">Buy car</a>
                         <div style="clear:both;"></div>
                       </div>
-                  <div class="desc">
-                    <p>Leaving the 99.99 percent in its dust, the Chiron is a 1500-hp smackdown of every hypercar.</p>
-                  </div>
-                  <div class="specs">
-                    <div class="spec mpg">
-                      <span>Make</span>
-                      <p>2019</p>
-                    </div>
-                    <div class="spec mpg">
-                      <span>Milage</span>
-                      <p>91,000<span>KM</p>
-                    </div>
-                    <div class="spec mpg">
-                      <span>Type</span>
-                      <p>Automatic</p>
-                    </div>
-                  </div>
                 </div>
               </div>
             </div>
@@ -116,26 +99,9 @@
                   </div>
                   <div class="ctas">
                     <a href="#" class="btn-car primary">Model Details</a>
-                    <a href="#" class="btn-car secondary">Cars for Sale</a>
+                    <a href="#" class="btn-car secondary">Buy car</a>
                         <div style="clear:both;"></div>
                       </div>
-                  <div class="desc">
-                    <p>Sporting an adaptive adjustable suspension, active aerodynamics, and trick rear-axle steering.</p>
-                  </div>
-                  <div class="specs">
-                    <div class="spec mpg">
-                      <span>Make</span>
-                      <p>2019</p>
-                    </div>
-                    <div class="spec mpg">
-                      <span>Milage</span>
-                      <p>91,000<span>KM</p>
-                    </div>
-                    <div class="spec mpg">
-                      <span>Type</span>
-                      <p>Automatic</p>
-                    </div>
-                  </div>
                 </div>
               </div>
             </div>
@@ -153,26 +119,9 @@
                   </div>
                   <div class="ctas">
                     <a href="#" class="btn-car primary">Model Details</a>
-                    <a href="#" class="btn-car secondary">Cars for Sale</a>
+                    <a href="#" class="btn-car secondary">Buy car</a>
                         <div style="clear:both;"></div>
                       </div>
-                  <div class="desc">
-                    <p>Nothing on Earth can prepare you for the eyeball-melting performance.</p>
-                  </div>
-                  <div class="specs">
-                    <div class="spec mpg">
-                      <span>Make</span>
-                      <p>2019</p>
-                    </div>
-                    <div class="spec mpg">
-                      <span>Milage</span>
-                      <p>91,000<span>KM</p>
-                    </div>
-                    <div class="spec mpg">
-                      <span>Type</span>
-                      <p>Automatic</p>
-                    </div>
-                  </div>
                 </div>
               </div>
             </div>
@@ -190,26 +139,9 @@
                   </div>
                   <div class="ctas">
                     <a href="#" class="btn-car primary">Model Details</a>
-                    <a href="#" class="btn-car secondary">Cars for Sale</a>
+                    <a href="#" class="btn-car secondary">Buy car</a>
                         <div style="clear:both;"></div>
                       </div>
-                  <div class="desc">
-                    <p>With a claimed top speed of 211 mph, the name 812 Superfast is not mere hyperbole.</p>
-                  </div>
-                  <div class="specs">
-                    <div class="spec mpg">
-                      <span>Make</span>
-                      <p>2019</p>
-                    </div>
-                    <div class="spec mpg">
-                      <span>Milage</span>
-                      <p>91,000<span>KM</p>
-                    </div>
-                    <div class="spec mpg">
-                      <span>Type</span>
-                      <p>Automatic</p>
-                    </div>
-                  </div>
                 </div>
               </div>
             </div>
@@ -227,26 +159,9 @@
                   </div>
                   <div class="ctas">
                     <a href="#" class="btn-car primary">Model Details</a>
-                    <a href="#" class="btn-car secondary">Cars for Sale</a>
+                    <a href="#" class="btn-car secondary">Buy car</a>
                         <div style="clear:both;"></div>
                       </div>
-                  <div class="desc">
-                    <p>McLaren’s know-how with lightweight, aerodynamic, ferocious supercars is undeniable.</p>
-                  </div>
-                  <div class="specs">
-                    <div class="spec mpg">
-                      <span>Make</span>
-                      <p>2019</p>
-                    </div>
-                    <div class="spec mpg">
-                      <span>Milage</span>
-                      <p>91,000<span>KM</p>
-                    </div>
-                    <div class="spec mpg">
-                      <span>Type</span>
-                      <p>Automatic</p>
-                    </div>
-                  </div>
                 </div>
               </div>
             </div>
@@ -264,67 +179,52 @@
                   </div>
                   <div class="ctas">
                     <a href="#" class="btn-car primary">Model Details</a>
-                    <a href="#" class="btn-car secondary">Cars for Sale</a>
+                    <a href="#" class="btn-car secondary">Buy car</a>
                         <div style="clear:both;"></div>
                       </div>
-                  <div class="desc">
-                    <p>Flaunting a huge rear wing, giant air intakes, and fender-filling wheels and tires.</p>
-                  </div>
-                  <div class="specs">
-                    <div class="spec mpg">
-                      <span>Make</span>
-                      <p>2019</p>
-                    </div>
-                    <div class="spec mpg">
-                      <span>Milage</span>
-                      <p>91,000<span>KM</p>
-                    </div>
-                    <div class="spec mpg">
-                      <span>Type</span>
-                      <p>Automatic</p>
-                    </div>
-                  </div>
                 </div>
               </div>
             </div>
            </div>
         </section>
-        <section class="addcar-section">
+        <section id="addcar" class="addcar-section">
           <div class="form-container">
             <div class="inner-container">
             <div class="selling-heading">
-              <h1>Add a Car</h1>
+              <h1 style="text-align: center;">Add a Car</h1>
             </div>
             <div class="addcar-form-container">
               <form action="" POST="method">
-
-               <div class="input-box">
-                <label for="make">Make</label><br>
-                <input type="number" id="make"><br>
+               <div class="input-box ad-form">
+                <label for="make">SellerID</label><br>
+                
+                <input type="number" id="sellerid" required><br>
                </div>
-                <div class="input-box">
+                <div class="input-box ad-form">
                   <label for="model">Model</label><br>
-                <input type="text" id="model"><br>
+                <input type="text" id="model" required><br>
                 </div>
-                <div class="input-box">
+                <div class="input-box ad-form">
                   <label for="year">Year</label><br>
-                  <input type="number" id="year"><br>
+                  <input type="number" id="year" required><br>
                 </div>
-                <div class="input-box">
+                <div class="input-box ad-form">
                   <label for="milage">Milage</label><br>
                   <input type="text" id="Milage"><br>
                 </div>
-                <div class="input-box">
+                <div class="input-box ad-form">
                   <label for="location">Location</label><br>
                   <input type="text" id="Location"><br>
                 </div>
-                <div class="input-box">
+                <div class="input-box ad-form">
                   <label for="Price">Price</label><br>
                 <input type="text" id="Price"><br>
                 </div>
 
                 <input type="submit" value="Submit" id="Submit">
+
               </form>
+              <div class="pop">Don't have a seller id ? <a href="Login.html"><button class="btn">Register</button></a></div>
             </div>
             </div>
           </div>
