Made all the final changes to meet the rubric / This completes the project as per rubric / although we have not finished up with designning due to deadline this is the final draft

--- a/Assignment/About.html
+++ b/Assignment/About.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header class="header">
             <div class="logo">
-              <a href="Index.html">GearShift</a>
+                <a href="Index.html">Gear<img style="max-width: 42px;" src="Pictures/Logo.png" alt="Logo">Shift</a>
             </div>
             <div class="nav-container">
               <ul>
