--- a/Assignment/Register.html
+++ b/Assignment/Register.html
@@ -12,7 +12,7 @@
     <div class="container">
         <header class="header">
           <div class="logo">
-            <a href="Index.html">GearShift</a>
+          <a href="Index.html">Gear<img style="max-width: 42px;" src="Pictures/Logo.png" alt="Logo">Shift</a>
           </div>
           <div class="nav-container">
             <ul>
@@ -78,7 +78,7 @@
                     <h4>$2,998,000</h4>
                   </div>
                   <div class="ctas">
-                    <a href="#" class="btn-car primary">Model Details</a>
+                    <a href="#" class="btn-car primary">More</a>
                     <a href="#" class="btn-car secondary">Buy car</a>
                         <div style="clear:both;"></div>
                       </div>
@@ -98,7 +98,7 @@
                     <h4>$157,995</h4>
                   </div>
                   <div class="ctas">
-                    <a href="#" class="btn-car primary">Model Details</a>
+                    <a href="#" class="btn-car primary">More</a>
                     <a href="#" class="btn-car secondary">Buy car</a>
                         <div style="clear:both;"></div>
                       </div>
@@ -118,7 +118,7 @@
                     <h4>$203,295</h4>
                   </div>
                   <div class="ctas">
-                    <a href="#" class="btn-car primary">Model Details</a>
+                    <a href="#" class="btn-car primary">More</a>
                     <a href="#" class="btn-car secondary">Buy car</a>
                         <div style="clear:both;"></div>
                       </div>
@@ -138,7 +138,7 @@
                     <h4>$315,000</h4>
                   </div>
                   <div class="ctas">
-                    <a href="#" class="btn-car primary">Model Details</a>
+                    <a href="#" class="btn-car primary">More</a>
                     <a href="#" class="btn-car secondary">Buy car</a>
                         <div style="clear:both;"></div>
                       </div>
@@ -158,7 +158,7 @@
                     <h4>$288,845</h4>
                   </div>
                   <div class="ctas">
-                    <a href="#" class="btn-car primary">Model Details</a>
+                    <a href="#" class="btn-car primary">More</a>
                     <a href="#" class="btn-car secondary">Buy car</a>
                         <div style="clear:both;"></div>
                       </div>
@@ -178,7 +178,7 @@
                     <h4>$144,650</h4>
                   </div>
                   <div class="ctas">
-                    <a href="#" class="btn-car primary">Model Details</a>
+                    <a href="#" class="btn-car primary">More</a>
                     <a href="#" class="btn-car secondary">Buy car</a>
                         <div style="clear:both;"></div>
                       </div>
@@ -210,15 +210,15 @@
                 </div>
                 <div class="input-box ad-form">
                   <label for="milage">Milage</label><br>
-                  <input type="text" id="Milage"><br>
+                  <input type="text" id="Milage" required><br>
                 </div>
                 <div class="input-box ad-form">
                   <label for="location">Location</label><br>
-                  <input type="text" id="Location"><br>
+                  <input type="text" id="Location" required><br>
                 </div>
                 <div class="input-box ad-form">
                   <label for="Price">Price</label><br>
-                <input type="text" id="Price"><br>
+                <input type="text" id="Price" required><br>
                 </div>
 
                 <input type="submit" value="Submit" id="Submit">
