--- a/Assignment/Index.html
+++ b/Assignment/Index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head> 
@@ -11,7 +13,7 @@
     <div class="container">
       <header class="header">
         <div class="logo">
-          <a href="Index.html">GearShift</a>
+          <a href="Index.html">Gear<img style="max-width: 42px;" src="Pictures/Logo.png" alt="Logo">Shift</a>
         </div>
         <div class="nav-container">
           <ul>
